plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sojka'
version = '0.0.1-SNAPSHOT'

ext {
	repsyUsername = project.hasProperty('repsyUser') ? project.repsyUser : System.getenv('REPSY_USERNAME');
	repsyPassword = project.hasProperty('repsyPass') ? project.repsyPass : System.getenv('REPSY_PASSWORD');
	repsyUrl = 'https://repo.repsy.io/mvn/' + repsyUsername + '/pomeranian-security'
}


java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()

	maven {
		url repsyUrl
		credentials {
			username repsyUsername
			password repsyPassword
		}
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Astra
	implementation 'org.apache.cassandra:java-driver-core:4.19.0'
	implementation 'org.apache.cassandra:java-driver-query-builder:4.19.0'
//	implementation 'io.stargate.grpc:grpc-proto:1.0.41'
	implementation 'io.grpc:grpc-netty-shaded:1.41.0'

	// Security
	implementation 'com.sojka:Pomeranian-Security:0.0.5-SNAPSHOT'

	compileOnly 'org.projectlombok:lombok'
//	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:cassandra:1.20.0'
	testImplementation 'org.testcontainers:postgresql:1.21.0'
//	testImplementation 'io.projectreactor:reactor-test'
//	testImplementation 'org.testcontainers:cassandra'
//	testImplementation 'org.testcontainers:junit-jupiter'
//	testImplementation 'org.testcontainers:r2dbc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
